kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_match_case_params/underscore_label/implicit_underscore_label.ph
type Nat {
    .O: Nat,
    .S(pred~n: Nat): Nat,
}

let pred = fun _(x: Nat): Nat {
    match x {
        .O => Nat.O,
        .S(:_) => x,
    }
};
